--- a/ansiblevmwareprovision.yml
+++ b/ansiblevmwareprovision.yml
@@ -1,6 +1,6 @@
 ---
 - name: provision vcenter templates using ansible
-  #hosts: localhost
+  hosts: localhost
   gather_facts: false
 
   #vars_prompt:
