--- a/ansiblevmwareprovision.yml
+++ b/ansiblevmwareprovision.yml
@@ -48,9 +48,9 @@
   tasks:
   - name: connect to vcenter and do a basic provisioning
     vmware_guest:
-      hostname: "{{ VMWARE_HOST }}"
-      username: "{{ VMWARE_USER }}"
-      password: "{{ VMWARE_PASSWORD }}"
+      hostname: "{{ vcenter_ip }}"
+      username: "{{ vcenter_user }}"
+      password: "{{ vcenter_password }}"
       validate_certs: no
       cluster: "{{ vm_cluster }}"
       folder: "{{ vm_folder }}"
