--- a/ansiblevmwareprovision.yml
+++ b/ansiblevmwareprovision.yml
@@ -25,7 +25,7 @@
     #vcenter_hostname: 10.1.2.3
     #vcenter_username: myUsername
     #vcenter_password: wrongpassword
-    
+
     # below are all of the details for the VM.  I'm overriding these at runtime.
     vm_datacenter: CIC Datacenter 01
     vm_cluster: VSPEX Cluster 01
@@ -46,9 +46,9 @@
   tasks:
   - name: connect to vcenter and do a basic provisioning
     vmware_guest:
-      hostname: "{{ VMWARE_HOST }}"
-      username: "{{ VMWARE_USER }}"
-      password: "{{ VMWARE_PASSWORD }}"
+      hostname: "{{ lookup('env', 'VMWARE_HOST') }}"
+      username: "{{ lookup('env', 'VMWARE_USER') }}"
+      password: "{{ lookup('env', 'VMWARE_PASSWORD') }}"
       validate_certs: no
       cluster: "{{ vm_cluster }}"
       folder: "{{ vm_folder }}"
